syntax = "proto3";

package invoker;
option go_package = "./invoker"; // 👈 Sửa thành đường dẫn tương đối
//option go_package = "grpc_container/invoker"; // 👈 Sửa thành tên module + tên package
//option go_package = "/invoker;invoker";
// ✅ Thêm dòng này

import "google/protobuf/struct.proto";

service Invoker {
  rpc Invoke (InvokeRequest) returns (InvokeReply);
}

message InvokeRequest {
  string packagePath = 1;
  string functionName = 2;
  google.protobuf.Struct params = 3;
}

message InvokeReply {
  google.protobuf.Struct result = 1;
}
